<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fung Yuen Butterfly</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_btf_details">Butterfly Details</string>

    
	<!--for check box -->
	
	<string-array name="rangeString">  
	    <item>/</item>
        <item>大</item>  
        <item>中</item>  
        <item>小</item>
    </string-array>
    
	<string-array name="specString"> 
	    <item>/</item> 
        <item>弄蝶科</item>  
        <item>鳳蝶科</item> 
        <item>粉蝶科</item> 
        <item>灰蝶科</item> 
        <item>蜆蝶科</item> 
        <item>眼蝶科</item> 
        <item>環蝶科</item> 
        <item>蛺蝶科</item> 
        <item>斑蝶科</item> 
        <item>珍蝶科</item> 
        <item>喙蝶科</item> 
    </string-array>
    
	<string-array name="haveWingTailString">  
	    <item>/</item>
        <item>有</item>  
        <item>沒有</item> 
    </string-array>
	
	
    <!--翅面主色-->
    <string name="fotColor">翅面主色 :</string>
    <string name="fot_brown">褐色</string>
    <string name="fot_yellow">黃色</string> 
    <string name="fot_white">白色</string>
    <string name="fot_black">黑色</string> 
    <string name="fot_orange">橙色</string> 
    <string name="fot_blue">藍色</string>  
    
    
    <!--翅底主色 -->
    <string name="bakColor">翅底主色 :</string>
    <string name="bak_brown">褐色</string>
    <string name="bak_yellow">黃色</string> 
    <string name="bak_white">白色</string>
    <string name="bak_black">黑色</string> 
    <string name="bak_orange">橙色</string> 
    <string name="bak_blue">藍色</string> 
    <string name="bak_red">紅色</string>
    <string name="dwnCtnTitle">下載新的蝴蝶資料庫</string>
    <string name="dwnCtnContent">是否下載新的蝴蝶圖鑑資料庫？</string>   
    
    
</resources>
