<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoreView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="65dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="18dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="體積 : "
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sRange"
            android:layout_width="100dp"
            android:layout_height="match_parent" >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="品種  : "
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sSpec"
            android:layout_width="91dp"
            android:layout_height="32dp" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="18dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="有沒有翅尾 : "
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sHaveWingTail"
            android:layout_width="100dp"
            android:layout_height="30dp" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="18dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fotColor"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        
        
        <CheckBox
            android:id="@+id/sfot_brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_brown"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sfot_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_yellow"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sfot_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_white"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sfot_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_black"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sfot_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_orange"
            android:textSize="13dp" />

        </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <CheckBox
            android:id="@+id/sfot_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fot_blue"
            android:textSize="13dp" />
        
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="18dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakColor"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/sbak_brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_brown"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sbak_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_yellow"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sbak_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_white"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sbak_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_black"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/sbak_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_orange"
            android:textSize="13dp" />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <CheckBox
            android:id="@+id/sbak_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bak_blue"
            android:textSize="13dp" />
    
    <CheckBox
        android:id="@+id/sbak_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bak_red"
        android:textSize="13dp" />

    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:background="@drawable/searchbtn" />
    

</LinearLayout>